--- a/src/views/index.html
+++ b/src/views/index.html
@@ -96,6 +96,8 @@
         padding: 10px 25px;
         margin-left: -1px;
         margin-top: -1px;
+        min-width: 75px;
+        min-height: 74px;
     }
 
     .box span {
