Hide 'Check for mistakes' button

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -46,7 +46,7 @@
                             <option value="/expert/">Expert</option>
                         </select></div>
                 </div>
-                <div class="check-mistakes-wrapper"><label
+                <!--div class="check-mistakes-wrapper"><label
                         class="check-mistakes"><span class="label-text">Check for Mistakes</span><span
                         class="switch"><input id="checkMistakes"
                                               type="checkbox"><span
@@ -56,7 +56,7 @@
                         viewBox="0 0 15 16"><path
                         fill="#4A90E2" fill-rule="evenodd"
                         d="M13.243 9.786c-.177.08-.343.192-.49.335l-.51.494v-8.03a.65.65 0 0 0-.65-.65H2.297a.65.65 0 0 0-.65.65v9.295c0 .36.291.65.65.65H7.71a1.785 1.785 0 0 0-.22 1H2.046a1.4 1.4 0 0 1-1.4-1.4V2.334a1.4 1.4 0 0 1 1.4-1.4h9.796a1.4 1.4 0 0 1 1.4 1.4v7.452zm-2.663 3.865l2.89-2.802a.684.684 0 0 1 .983.031.739.739 0 0 1-.026 1.021l-3.407 3.382a.625.625 0 0 1-.88 0l-1.402-1.387a.734.734 0 0 1-.002-1.042.74.74 0 0 1 1.046 0l.798.797zm-3.525-2.638c-1.503 0-2.526-.904-2.57-2.138H5.82c.082.574.589.957 1.244.957.742 0 1.253-.498 1.253-1.249 0-.76-.516-1.267-1.248-1.267-.536 0-.942.234-1.182.621H4.596l.344-4.003H9.28v1.2h-3.22L5.907 6.91h.087c.291-.42.78-.674 1.463-.674 1.311 0 2.24.961 2.24 2.315 0 1.464-1.058 2.463-2.641 2.463z"></path></svg></span></span></label>
-                </div>
+                </div-->
                 <div class="timer-wrapper"><span id="timer"
                                                  class="timer"></span>
                     <div class="icon icon-pause timer-pause"></div>
