--- a/src/views/index.html
+++ b/src/views/index.html
@@ -46,6 +46,7 @@
                             <option value="/expert/">Expert</option>
                         </select></div>
                 </div>
+                <span class="top-spacer"></span>
                 <!--div class="check-mistakes-wrapper"><label
                         class="check-mistakes"><span class="label-text">Check for Mistakes</span><span
                         class="switch"><input id="checkMistakes"
@@ -424,26 +425,6 @@
                 </div>
                 <div class="game-controls-wrapper">
                     <nav>
-                        <div class="new-game-button-wrapper">
-                            <div class="button new-game-button">New Game</div>
-                            <div class="new-game-menu">
-                                <div class="tooltip-arrow"></div>
-                                <ul class="select-difficulty">
-                                    <li class="lost-progress-label">Current game
-                                        progress will be lost
-                                    </li>
-                                    <li><a class="new-game-menu-new">New
-                                        Game</a>
-                                    </li>
-                                    <li>
-                                        <a class="new-game-menu-restart">Restart</a>
-                                    </li>
-                                    <li>
-                                        <a class="new-game-menu-cancel">Cancel</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
                         <div class="numpad-wrapper">
                             <div class="numpad">
                                 <div class="numpad-item" data-value="1">
@@ -520,64 +501,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="game-controls">
-                            <div class="game-controls-buttons">
-                                <div class="game-controls-item game-controls-pencil"
-                                     data-action="pencil">
-                                    <div class="svg-wrapper">
-                                        <svg class="icon-game-control"
-                                             xmlns="http://www.w3.org/2000/svg"
-                                             viewBox="0 0 30 30">
-                                            <path fill="currentColor"
-                                                  fill-rule="evenodd"
-                                                  d="M3.73 28.124l6.329-2.11c.006-.003.009-.007.014-.01a.514.514 0 0 0 .191-.117L28.403 7.732a2.593 2.593 0 0 0 .763-1.843c0-.697-.271-1.35-.763-1.843L25.099.74c-.981-.986-2.697-.988-3.682 0L3.277 18.895a.497.497 0 0 0-.118.19c-.001.004-.006.007-.008.013L.026 28.48c-.005.015.002.03-.002.043-.01.041-.024.08-.024.122 0 .028.01.052.016.08a.512.512 0 0 0 .504.442h28.646V28.13L3.73 28.124zM18.75 4.882l5.512 5.518L9.895 24.781l-5.514-5.519L18.75 4.882zm3.403-3.405c.591-.593 1.62-.59 2.21 0l3.304 3.307a1.562 1.562 0 0 1 0 2.211L25 9.663l-5.514-5.518 2.667-2.668zM3.874 20.228L8.93 25.29l-7.586 2.531 2.53-7.593z"></path>
-                                        </svg>
-                                    </div>
-                                    <div class="game-controls-label">Notes</div>
-                                </div>
-                                <div class="game-controls-item game-controls-hint"
-                                     data-action="hint">
-                                    <svg class="icon-game-control"
-                                         xmlns="http://www.w3.org/2000/svg"
-                                         viewBox="0 0 25 33">
-                                        <path fill="currentColor"
-                                              fill-rule="evenodd"
-                                              d="M17.075 29.179L7.7 31.262a.522.522 0 0 0 .112 1.03.57.57 0 0 0 .114-.013l9.375-2.083a.52.52 0 1 0-.226-1.017M12.5 0C5.607 0 0 5.607 0 12.5a12.49 12.49 0 0 0 7.608 11.505.52.52 0 1 0 .408-.958A11.447 11.447 0 0 1 1.042 12.5c0-6.318 5.14-11.458 11.458-11.458 6.318 0 11.459 5.14 11.459 11.458 0 4.603-2.738 8.743-6.976 10.547a.522.522 0 0 0-.316.479v2.619L7.7 28.137a.522.522 0 0 0 .112 1.03.57.57 0 0 0 .114-.013l9.375-2.083a.522.522 0 0 0 .408-.509v-2.697A12.486 12.486 0 0 0 25 12.5C25 5.607 19.393 0 12.5 0"></path>
-                                    </svg>
-                                    <div class="game-controls-label">Hint</div>
-                                </div>
-                                <div class="game-controls-item game-controls-undo"
-                                     data-action="undo">
-                                    <svg class="icon-game-control"
-                                         xmlns="http://www.w3.org/2000/svg"
-                                         viewBox="0 0 27 27">
-                                        <path fill="currentColor"
-                                              fill-rule="evenodd"
-                                              d="M13.021 0C9.207 0 5.589 1.715 3.125 4.609V.521a.521.521 0 0 0-1.042 0v5.208c0 .288.234.521.521.521h5.208a.522.522 0 1 0 0-1.042H3.977c2.267-2.619 5.566-4.166 9.044-4.166C19.625 1.042 25 6.416 25 13.021 25 19.626 19.625 25 13.021 25 6.416 25 1.042 19.626 1.042 13.021a.521.521 0 0 0-1.042 0c0 7.18 5.84 13.021 13.021 13.021 7.18 0 13.021-5.841 13.021-13.021C26.042 5.841 20.201 0 13.021 0"></path>
-                                    </svg>
-                                    <div class="game-controls-label">Undo</div>
-                                </div>
-                                <div class="game-controls-item game-controls-erase"
-                                     data-action="erase">
-                                    <svg class="icon-game-control"
-                                         xmlns="http://www.w3.org/2000/svg"
-                                         viewBox="0 0 32 30">
-                                        <path fill="currentColor"
-                                              fill-rule="evenodd"
-                                              d="M13.861 28.126l7.01-7.017.004-.003.002-.002 9.58-9.59a2.584 2.584 0 0 0 .763-1.842c0-.695-.271-1.35-.763-1.843L23.373.739c-.986-.986-2.7-.984-3.682 0l-9.58 9.59-.004.002-.002.003-9.344 9.35A2.592 2.592 0 0 0 0 21.529c0 .695.27 1.35.761 1.842l5.64 5.645a.528.528 0 0 0 .369.153h24.48v-1.042H13.861zm6.566-26.65c.591-.587 1.621-.59 2.209 0l7.084 7.09c.295.295.458.688.458 1.106 0 .418-.163.81-.458 1.105L20.506 20l-9.292-9.302 9.213-9.222zM6.986 28.126l-5.488-5.492a1.557 1.557 0 0 1-.457-1.105c0-.418.163-.81.457-1.106l8.979-8.986 9.291 9.302-7.381 7.387H6.986z"></path>
-                                    </svg>
-                                    <div class="game-controls-label">Erase</div>
-                                </div>
-                            </div>
-                        </div>
                     </nav>
                 </div>
             </div>
         </div>
     </div>
-    <aside id="aside" class="aside" role="complementary">
-        <!-- Needed to make board look OK -->
-    </aside>
+    <!--    <aside id="aside" class="aside" role="complementary">-->
+    <!--        &lt;!&ndash; Needed to make board look OK &ndash;&gt;-->
+    <!--    </aside>-->
 </div>
 
 <script>
@@ -629,6 +560,14 @@
 </script>
 
 <style>
+    .numpad-wrapper .numpad-item:nth-of-type(9), .numpad-wrapper .numpad-item:nth-of-type(8), .numpad-wrapper .numpad-item:nth-of-type(7) {
+        border-bottom-width: 1px;
+    }
+
+    .top-spacer {
+        width: 540px;
+    }
+
     article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
         display: block
     }
@@ -1144,6 +1083,7 @@
         -moz-box-direction: normal;
         -ms-flex-direction: row;
         flex-direction: row;
+        justify-content: center;
     }
 
     @media screen and (max-width: 800px) {
@@ -1181,6 +1121,7 @@
         -ms-flex-pack: justify;
         justify-content: space-between;
         margin-bottom: 20px;
+        justify-content: center;
     }
 
     @media screen and (max-width: 800px) {
@@ -1256,9 +1197,10 @@
     }
 
     .game-info-wrapper .timer-wrapper .timer {
+        float: right;
         display: inline-block;
         position: relative;
-        top: -7px;
+        top: 7px;
         font-weight: 600;
         color: #94a3b7;
         font-size: 16px;
@@ -1400,7 +1342,7 @@
     .game-wrapper {
         position: relative;
         width: 100%;
-        max-width: 500px;
+        max-width: 499px;
         background-color: #f3f6fa
     }
 
@@ -2433,8 +2375,9 @@
     }
 
     .game-controls-wrapper {
+        max-height: 300px;
         min-width: 200px;
-        max-width: 360px;
+        max-width: 300px;
         width: 50%;
         margin-left: 20px;
         user-select: none;
